# cxxFP

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  functional_asm.md
actors/: CMakeLists.txt  caf_hello_world.cpp  simple_actor.cpp
composition/: CMakeLists.txt  README.md  compose.cpp  partial.cc  partial_application.cpp
data_structures/: CMakeLists.txt  either_exception.cpp  either_simple.cpp
data_structures/maybe/: CMakeLists.txt  README.md  any.cpp  optional.cpp  optional_lazy_resource.cpp  simple_maybe_fmap.cpp
data_structures/range/: CMakeLists.txt  algo_copy_elems.cpp  algo_count_elems.cpp  algo_cxx20_to_vector.cpp  algo_filter_elems.cpp  algo_for_each.cpp  algo_schwartzian_transform.cpp  algo_word_frequency.cpp  comp_map_filter.cpp  comp_map_filter_basic.cpp  comp_pipe.cpp  copy_elems.cpp  factory_delimited.cpp  factory_iota.cpp  factory_istream_range.cpp  map_as_pipe.cpp  map_filter_composing.cpp  perf_simple_immutable.cpp  perf_simple_sort.cpp  range_actions.cpp  range_loop_init_value.cpp  rangev3_perf.cpp  rangev3_piping.cpp
data_structures/stream/: CMakeLists.txt  README.md  infinite_stream.cpp  split_stream.cpp
effects/: CMakeLists.txt  programs_as_values.cpp
either/: CMakeLists.txt  exception.cpp
func_application/: CMakeLists.txt  README.md  invoke.cpp
functor/: CMakeLists.txt  function_lifting.cpp
higher_order/: CMakeLists.txt  boost_phoenix_simple.cpp  call_multiple_functions.cpp  copy.cpp  function_as_arguments.cpp  lambda_member_variables.cpp  map.cpp  reduce.cpp  sort.cpp
immutability/: CMakeLists.txt  builder_pattern.cpp
lambda/: CMakeLists.txt  README.md  recursion.cpp
lazy_evaluation/: CMakeLists.txt  lazy_lambda.cpp  lazy_value.cpp
maybe/: CMakeLists.txt  README.md  any.cpp  optional.cpp  simple_maybe_fmap.cpp
pattern_matching/: CMakeLists.txt  README.md  apply.cpp  array_unpack.cpp  tuple_unpack.cpp
product_type/: CMakeLists.txt  README.md  integer_sequence.cpp  tuple.cpp  tuple_algorithms.cpp  tuple_apply.cpp
range/: CMakeLists.txt  README.md  adapter_filter.cpp  copy_elems.cpp  count_elems.cpp  irange.cpp  irange_stdin.cpp  map_as_pipe.cpp  map_filter_composing.cpp  range_actions.cpp  range_delimited.cpp  rangev3.cpp  rangev3_perf.cpp  rangev3_piping.cpp  schwartzian_transform.cpp  stream_range.cpp
recursion/: CMakeLists.txt  tailrec.cpp
semantics/: CMakeLists.txt  compose.cpp  invoke.cpp  partial_application.cpp  pattern_match.cpp
semantics/decompose/: CMakeLists.txt  README.md  tuple_apply.cpp  tuple_unpack.cpp
semantics/higher_order/: boost_phoenix_simple.cpp  copy.cpp  function_as_arguments.cpp
semantics/pattern_matching/: CMakeLists.txt  array_unpack.cpp
semantics/recursion/: CMakeLists.txt  recursive_lambda.cpp  tailrec.cpp
src/: immutable.cc  immutable.hh  main.cc
stream/: CMakeLists.txt  README.md  split_to_subs.cpp  stream_inf.cpp
sum_type/: CMakeLists.txt  README.md  variant.cpp
tests/: test_immutable.cc
type_constraint/: constraint.cpp
type_driven/: CMakeLists.txt
types/: CMakeLists.txt  recursive_type.cpp
types/product_type/: CMakeLists.txt  README.md  integer_sequence.cpp  structured_binding.cpp  tuple.cpp  tuple_algorithms.cpp  tuple_apply.cpp  tuple_tie.cpp
types/sum_type/: CMakeLists.txt  variant.cpp  variant_pattern_matching.cpp
utilities/: test_utilities.h
